--- a/parking-backend/src/main/resources/application.properties
+++ b/parking-backend/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 logging.level.edu.fra.uas.parking=debug
 # Mysql connection:
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parking
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parking?useSSL=false
 spring.datasource.username=parking
 spring.datasource.password=parking123456
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect="org.hibernate.dialect.MySQL5Dialect"
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 
