--- a/packing-frontend/package.json
+++ b/packing-frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "angular-calendar": "^0.31.0",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
