we added the mail server

--- a/parking-backend/src/main/resources/application.properties
+++ b/parking-backend/src/main/resources/application.properties
@@ -16,3 +16,13 @@ jwt.secret=parking-secret-key
 
 # Server
 server.servlet.context-path=/api/v1/web
+
+spring.mail.host=smtp.ionos.de
+spring.mail.protocol=smtp
+spring.mail.port=587
+spring.mail.username=pms@alnaasan.de
+spring.mail.password=rvEdswt6JWXqnN
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.ionos.de
+spring.mail.properties.mail.smtp.connectiontimeout=8000
