--- a/parking-backend/src/main/resources/application.properties
+++ b/parking-backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=parking123456
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # JWT Configuration
 jwt.secret=parking-secret-key
