--- a/parking-backend/src/main/resources/application-prod.properties
+++ b/parking-backend/src/main/resources/application-prod.properties
@@ -2,13 +2,13 @@
 logging.level.edu.fra.uas.parking=debug
 # Mysql connection:
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.97.24:3306/prod_parking?useSSL=false
+spring.datasource.url=jdbc:mysql://db.alnaasan.de:3306/prod_parking?useSSL=false
 spring.datasource.username=parking
 spring.datasource.password=parking123456
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # JWT Configuration
