--- a/parking-backend/src/main/resources/application-prod.properties
+++ b/parking-backend/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 logging.level.edu.fra.uas.parking=debug
 # Mysql connection:
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://db.alnaasan.de:3306/prod_parking?useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.97.24:3306/prod_parking?useSSL=false
 spring.datasource.username=parking
 spring.datasource.password=parking123456
 ## Hibernate Properties
