check for hours clicked

--- a/parking-backend/pom.xml
+++ b/parking-backend/pom.xml
@@ -53,8 +53,9 @@
 
         <!-- MySQL Connector Dependency -->
         <dependency>
-            <groupId>mysql</groupId> <!-- Updated groupId -->
-            <artifactId>mysql-connector-java</artifactId> <!-- Updated artifactId -->
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
         </dependency>
 
         <!-- Spring Boot Test Dependency -->
