--- a/parking-backend/src/main/resources/application.properties
+++ b/parking-backend/src/main/resources/application.properties
@@ -1,15 +1,26 @@
 # Logger activation
 logging.level.edu.fra.uas.parking=debug
 # Mysql connection:
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parking?useSSL=false
-spring.datasource.username=parking
-spring.datasource.password=parking123456
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parking?useSSL=false
+# spring.datasource.username=parking
+# spring.datasource.password=parking123456
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#use postgresql connection: for supabase database
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://db.bqsswounolcpycranvvs.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=JvzLFPjrh31Bvtar
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.show-sql=false
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.show-sql=true
 
 # JWT Configuration
 jwt.secret=parking-secret-key
