Revert "check for hours clicked"
This reverts commit 6737137a1727efbee5de03d34fc87379e6c8445c.

--- a/parking-backend/pom.xml
+++ b/parking-backend/pom.xml
@@ -53,9 +53,8 @@
 
         <!-- MySQL Connector Dependency -->
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.6.0</version>
+            <groupId>mysql</groupId> <!-- Updated groupId -->
+            <artifactId>mysql-connector-java</artifactId> <!-- Updated artifactId -->
         </dependency>
 
         <!-- Spring Boot Test Dependency -->
